# OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj
Dependencies/glfw-3.3.8/: CMakeLists.txt
include/: fileSystem.h  math.hpp  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h  wrapper.h
res/shaders/: basic.shader
shader/: fragment.frag
src/: Application.cpp  fileSystem.cpp  fileSystem.h  indexBuffer.cpp  indexBuffer.h  math.hpp  renderer.cpp  shader.cpp  shader.h  texture.cpp  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBufferLayout.h  wrapper.cpp
